// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interpreter - Structs should interpret structs 1`] = `
{
  "isNominal": true,
  "members": {
    "x": {
      "primitiveType": "number",
      "type": "type",
      "typeKind": "primitive",
    },
    "y": {
      "primitiveType": "number",
      "type": "type",
      "typeKind": "primitive",
    },
  },
  "optional": {
    "x": false,
    "y": false,
  },
  "type": "type",
  "typeKind": "struct",
  "typeName": "Point",
}
`;

exports[`Interpreter - Structs should interpret structs with optional fields 1`] = `
{
  "isNominal": true,
  "members": {
    "x": {
      "primitiveType": "number",
      "type": "type",
      "typeKind": "primitive",
    },
    "y": {
      "primitiveType": "number",
      "type": "type",
      "typeKind": "primitive",
    },
  },
  "optional": {
    "x": false,
    "y": true,
  },
  "type": "type",
  "typeKind": "struct",
  "typeName": "Point",
}
`;
